Adding OpenFlow Plugin Lithium config subsystem docs
Change-Id: I44d93b3a807381836f8e49f555a389e9906fd9c4
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
@@ -8,7 +8,7 @@ guide first.
 
 // include::odl-ofp-sequence-diagram.adoc[]
 
-// include::odl-ofp-config-subsystem.adoc[]
+include::odl-ofp-config-subsystem.adoc[]
 
 // include::odl-ofp-message-spy.adoc[]
 
