Adding OpenFlow Plugin message spy docs
Change-Id: I2d14600cb523a4b77d3e09a90061e7ef780170a4
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
@@ -11,7 +11,7 @@ It can be found on https://www.opendaylight.org/downloads[the OpenDaylight softw
 
 // include::odl-ofp-config-subsystem.adoc[]
 
-// include::odl-ofp-message-spy.adoc[]
+include::odl-ofp-message-spy.adoc[]
 
 // * OpenDaylight_OpenFlow_Plugin:Backlog:Extensibility[Extensibility Framework]
 
