--- a/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
@@ -11,7 +11,7 @@ include::odl-ofp-sequence-diagram.adoc[]
 
 // include::odl-ofp-config-subsystem.adoc[]
 
-// include::odl-ofp-message-spy.adoc[]
+include::odl-ofp-message-spy.adoc[]
 
 // * OpenDaylight_OpenFlow_Plugin:Backlog:Extensibility[Extensibility Framework]
 
