--- a/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
@@ -10,7 +10,7 @@ guide first.
 
 // include::odl-ofp-config-subsystem.adoc[]
 
-// include::odl-ofp-message-spy.adoc[]
+include::odl-ofp-message-spy.adoc[]
 
 // * OpenDaylight_OpenFlow_Plugin:Backlog:Extensibility[Extensibility Framework]
 
