Adding OpenFlow Plugin yang model docs
Change-Id: I06cabce6803d0129f47fbddccb3009691570443a
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
@@ -14,7 +14,7 @@ guide first.
 
 // * OpenDaylight_OpenFlow_Plugin:Backlog:Extensibility[Extensibility Framework]
 
-// include::odl-ofp-yang-models.adoc[]
+include::odl-ofp-yang-models.adoc[]
 
 // include::odl-ofp-feature-tree.adoc[]
 
