--- a/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
@@ -15,7 +15,7 @@ It can be found on https://www.opendaylight.org/downloads[the OpenDaylight softw
 
 // * OpenDaylight_OpenFlow_Plugin:Backlog:Extensibility[Extensibility Framework]
 
-// include::odl-ofp-yang-models.adoc[]
+include::odl-ofp-yang-models.adoc[]
 
 // include::odl-ofp-feature-tree.adoc[]
 
