Adding OpenFlow plugin feature tree docs
Change-Id: I9d507001844042f522f491de6f039b099f47f6db
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
@@ -17,7 +17,7 @@ include::odl-ofp-sequence-diagram.adoc[]
 
 // include::odl-ofp-yang-models.adoc[]
 
-// include::odl-ofp-feature-tree.adoc[]
+include::odl-ofp-feature-tree.adoc[]
 
 // include::odl-ofp-wiring-up-notifications.adoc[]
 
