Adding OpenFlow Plugin wiring up notifications docs
Change-Id: I08d6ad80d1c2080fe1519c4627b17a5261768616
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
@@ -19,7 +19,7 @@ include::odl-ofp-message-spy.adoc[]
 
 include::odl-ofp-feature-tree.adoc[]
 
-// include::odl-ofp-wiring-up-notifications.adoc[]
+include::odl-ofp-wiring-up-notifications.adoc[]
 
 === Message Order Preservation
 
