--- a/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
@@ -19,7 +19,7 @@ It can be found on https://www.opendaylight.org/downloads[the OpenDaylight softw
 
 // include::odl-ofp-feature-tree.adoc[]
 
-// include::odl-ofp-wiring-up-notifications.adoc[]
+include::odl-ofp-wiring-up-notifications.adoc[]
 
 === Message Order Preservation
 
