Adding OpenFlow Plugin Lithium developer guide outline
Change-Id: Id4bc25acbeeecd75db9712d8178f11e90c312335
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -86,6 +86,8 @@ include::opflex/genie-dev.adoc[]
 
 include::opflex/libopflex-dev.adoc[]
 
+include::openflowplugin/odl-ofp-developer-guide.adoc[]
+
 include::ovsdb/ovsdb-developer.adoc[]
 
 include::bgpcep/odl-bgpcep-pcep-all-dev.adoc[PCEP]
