Adding OpenFlow Plugin Lithium developer guide outline
Patch Set 4: moving to master from stable/lithium and making the text
             not be release-specific to Lithium.

Change-Id: Id4bc25acbeeecd75db9712d8178f11e90c312335
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -80,6 +80,8 @@ include::sdninterfaceapp/odl-sdninterfaceapp-all-dev.adoc[]
 
 include::openflowjava/odl-openflowjava-protocol-dev.adoc[]
 
+include::openflowplugin/odl-ofp-developer-guide.adoc[]
+
 include::opflex/agent-ovs-dev.adoc[]
 
 include::opflex/genie-dev.adoc[]
