Adding OpenFlow Plugin sequence diagram docs
Change-Id: I676924d9f30c3c96073afdf067c775291a5d5e92
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
@@ -7,7 +7,7 @@ guide first.
 
 It can be found on https://www.opendaylight.org/downloads[the OpenDaylight software download page].
 
-// include::odl-ofp-sequence-diagram.adoc[]
+include::odl-ofp-sequence-diagram.adoc[]
 
 // include::odl-ofp-config-subsystem.adoc[]
 
