Adding OpenFlow Plugin sequence diagram docs
Change-Id: I676924d9f30c3c96073afdf067c775291a5d5e92
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/openflowplugin/odl-ofp-developer-guide.adoc
@@ -6,7 +6,7 @@ covered under the user guide. Please follow the OpenFlow plugin user
 guide first.
 
 
-// include::odl-ofp-sequence-diagram.adoc[]
+include::odl-ofp-sequence-diagram.adoc[]
 
 // include::odl-ofp-config-subsystem.adoc[]
 
