Table offset description in Group Based Policy
Description updated according to implementation for bug 3353.

Change-Id: Ibe4f12c1ade3e2b9c25af4f218a6f484747444b3
Signed-off-by: Tomas Cechvala <tcechval@cisco.com>

--- a/manuals/user-guide/src/main/asciidoc/groupbasedpolicy/odl-groupbasedpolicy-ofoverlay-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/groupbasedpolicy/odl-groupbasedpolicy-ofoverlay-user-guide.adoc
@@ -21,13 +21,17 @@ When this feature is loaded "standalone", the user is required to configure infr
 * and creating the VXLAN/VXLAN-GPE tunnel ports on the bridges. 
 
 [[offset]]
-In Lithium, the *GBP* OfOverlay renderer also supports a table offset option, to offset the pipeline post-table 0
+In Lithium, the *GBP* OfOverlay renderer also supports a table offset option, to offset the pipeline post-table 0.
+The table offset value is stored in config datastore and it may be rewritten in runtime.
 
-This is set by changing:
+A default value is set by changing:
  <gbp-ofoverlay-table-offset>0</gbp-ofoverlay-table-offset>
 
 in file:
 ./distribution-karaf/target/assembly/etc/opendaylight/karaf/15-groupbasedpolicy-ofoverlay.xml
+
+Because of persistence, the default value is used only when the OfOverlay renderer starts and no other
+value has been written before.
 
 ==== OpenFlow Overlay Architecture
 
