--- a/manuals/user-guide/src/main/asciidoc/groupbasedpolicy/odl-groupbasedpolicy-ofoverlay-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/groupbasedpolicy/odl-groupbasedpolicy-ofoverlay-user-guide.adoc
@@ -21,13 +21,26 @@ When this feature is loaded "standalone", the user is required to configure infr
 * and creating the VXLAN/VXLAN-GPE tunnel ports on the bridges. 
 
 [[offset]]
-In Lithium, the *GBP* OfOverlay renderer also supports a table offset option, to offset the pipeline post-table 0
+In Lithium, the *GBP* OfOverlay renderer also supports a table offset option, to offset the pipeline post-table 0.
+The value of table offset is stored in the config datastore and it may be rewritten at runtime.
 
-This is set by changing:
+----
+PUT http://{{controllerIp}}:8181/restconf/config/ofoverlay:of-overlay-config
+{
+    "of-overlay-config": {
+        "gbp-ofoverlay-table-offset": 6
+    }
+}
+----
+
+The default value is set by changing:
  <gbp-ofoverlay-table-offset>0</gbp-ofoverlay-table-offset>
 
 in file:
-./distribution-karaf/target/assembly/etc/opendaylight/karaf/15-groupbasedpolicy-ofoverlay.xml
+distribution-karaf/target/assembly/etc/opendaylight/karaf/15-groupbasedpolicy-ofoverlay.xml
+
+To avoid overwriting runtime changes, the default value is used only when the OfOverlay renderer starts and no other
+value has been written before.
 
 ==== OpenFlow Overlay Architecture
 
