[DO NOT MERGE] example of importing docs from a remote project
Change-Id: Ie15f2935328515bbbcf5f97415b1724edc5c6897
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/readme/src/main/asciidoc/readme.adoc
+++ b/manuals/readme/src/main/asciidoc/readme.adoc
@@ -17,3 +17,5 @@ include::template_developer_guide.adoc[Developer Guide Template]
 include::template_tutorial.adoc[Tutorial Template]
 
 include::template_release_notes.adoc[Release Notes Template]
+
+include::ttp-docs-jar/ttp-model-dev.adoc[TTP Model Dev]
